--- a/_posts/2022-07-01-recycled.md
+++ b/_posts/2022-07-01-recycled.md
@@ -5,12 +5,14 @@ description: The development of a reverse recycling machine
 date: 2022-07-01
 image: "/images/logo2.jpg"
 ---
-# Premise: Why did I even make a reverse recycling machine?
+## Premise: Why did I even make a reverse recycling machine?
+
 The tl;dr of it that it was part of my univerity's coursework. This is quite underwhelming, yes. However, the project turned out to be a lot more fun than I had imagined. So much so that I though it deserved it's own blog post. Without further ado, let's get stuck in.
 
-# What is RecyclEd?
+## What is RecyclEd?
+
 RecyclEd is a reverse recycling machine that takes recyclable items from users and classifies them according to their object category (plastic bottle, glass bottle, metal can, or rubbish). Object classification is performed using a residual neural network. If the object is classified as recycling, the system will move the object into the appropriate bin. Based on the items accepted, the user will be entitled to monetary compensation, given through a coupon to the user.
 
-#### How does it work: Step-by-step
+### How does it work: Step-by-step
 
-TBC
+TBC.
